# beancount-tui

./: CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example.beancount
src/beancount_tui/: __init__.py  app.py  editor.py  ledger.py
src/beancount_tui/widgets/: __init__.py  account_tree.py  confirm_dialog.py  directive_form.py  filter_bar.py  postings_area.py  transaction_form.py  transaction_table.py
tests/: conftest.py  test_app.py  test_editor.py  test_ledger.py
