[project]
name = "beancount-tui"
version = "0.1.0"
description = "A terminal user interface for editing Beancount ledgers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # <3.2.1: 3.2.1 ships no sdist, and 3.2.2+ build-requires flex-bin/bison-bin,
    # whose ziglang build dependency has no wheels for platforms like Android
    # (Termux) — making source builds impossible there. 3.2.0 builds from source
    # with just meson and system flex/bison.
    "beancount>=3.0.0,<3.2.1",
    "textual>=0.80.0",
]

[project.scripts]
beancount-tui = "beancount_tui.app:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beancount_tui"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
files = ["src"]
strict = false
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "beancount.*"
ignore_missing_imports = true
